--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake/common"]
 	path = cmake/common
-	url = https://github.com/mpusz/cmake_scripts.git
+	url = https://github.com/mpusz/cmake-scripts.git
