--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,7 +21,8 @@
 # SOFTWARE.
 
 
-find_package(GTest CONFIG REQUIRED)
+# check if conan installed a test framework
+conan_check_testing(GTest)
 
 # unit tests
 add_executable(unit_tests
@@ -30,7 +31,7 @@ add_executable(unit_tests
 target_link_libraries(unit_tests
     PRIVATE
         mp::new_project
-        GTest::gtest_main
+        CONAN_PKG::GTest
 )
 
 include(GoogleTest)
